# kernelos2

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: filesystem.rs  lib.rs  main.rs
src/components/: clock.rs  desktop.rs  file_compressor.rs  file_explorer.rs  image_viewer.rs  mod.rs  taskbar.rs  terminal.rs  text_editor.rs  window.rs
